adding twilio sms notification

--- a/to-do-app-backend/src/main/resources/application.properties
+++ b/to-do-app-backend/src/main/resources/application.properties
@@ -5,7 +5,15 @@ spring.datasource.password= parool123
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
 
-server.port=8081
+server.port=8081 
+
+spring.quartz.job-store-type=jdbc
+spring.quartz.jdbc.initialize-schema=always
+
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
+spring.quartz.properties.org.quartz.threadPool.threadCount = 2
+spring.quartz.properties.org.quartz.jobStore.useProperties=true
+
+twilio.phone_number.to={add your phone number}
